updated excel export mechanism